--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,25 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: black;
+  background-color: white;
 }
 
 .css-1cfdxra {
   color: white;
+}
+
+.css-1jbbae0 {
+  color: black;
+  background-color: white;
+}
+
+.css-y5du55 {
+  color: black;
+}
+
+.css-y5du55:hover {
+  color: white;
+}
+.chakra-dialog__content {
+  background-color: white;
 }
